--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://127.0.0.1:27017/news
+MONGO_URL=mongodb+srv://warsaw:kirser13@cluster0.2drpfki.mongodb.net/news?retryWrites=true&w=majority
 SECRET_KEY="olegmongol"
